# serializer version: 1
# name: TestPublishBridge.test_bridge_discovery_payload
  dict({
    'availability': list([
      dict({
        'payload_available': 'online',
        'payload_not_available': 'offline',
        'topic': 'lcntest/bridge/status',
      }),
    ]),
    'components': dict({
      'lcntest_bridge_status': dict({
        'name': 'Status',
        'platform': 'sensor',
        'state_topic': 'lcntest/bridge/status',
        'unique_id': 'lcntest_bridge_status',
      }),
    }),
    'dev': dict({
      'identifiers': list([
        'lcntest_bridge',
      ]),
      'manufacturer': 'lcn2mqtt',
      'model': 'LCN2MQTT Bridge',
      'name': 'LCN2MQTT Bridge (lcntest)',
    }),
    'o': dict({
      'name': 'lcntest',
      'sw': '0.1.0',
      'url': 'https://github.com/alengwenus/lcn2mqtt',
    }),
  })
# ---
# name: TestPublishModule.test_module_discovery_payload
  dict({
    'availability': list([
      dict({
        'payload_available': 'online',
        'payload_not_available': 'offline',
        'topic': 'lcntest/bridge/status',
      }),
    ]),
    'components': dict({
    }),
    'dev': dict({
      'hw_version': 'm000007',
      'identifiers': list([
        'lcntest_m000007',
      ]),
      'manufacturer': 'Issendorff',
      'model': 'UnknownModuleType',
      'name': 'LCN Module (M000007)',
      'serial_number': '0x-1',
      'sw_version': '0x-1',
      'via_device': 'lcntest_bridge',
    }),
    'o': dict({
      'name': 'lcntest',
      'sw': '0.1.0',
      'url': 'https://github.com/alengwenus/lcn2mqtt',
    }),
  })
# ---
